# ai-street-market

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  pyproject.toml
docs/: BUILDING_AN_AGENT.md  DEPLOYMENT.md  MANAGED-AGENTS.md  PROTOCOL-V2.md  PROTOCOL.md  RESTART.md  VIEWER-PROTOCOL.md  WORLD-STATE.md  maslow-roadmap.md
infrastructure/: Dockerfile.nats  docker-compose.yml
libs/: pyproject.toml
libs/streetmarket/: __init__.py
libs/streetmarket/agent/: __init__.py  actions.py  base.py  llm_brain.py  llm_config.py  managed_agent.py  market_agent.py  state.py  trading_agent.py
libs/streetmarket/client/: __init__.py  nats_client.py
libs/streetmarket/db/: __init__.py  connection.py  models.py
libs/streetmarket/helpers/: __init__.py  factory.py  sanitize.py  topic_map.py  validation.py
libs/streetmarket/ledger/: __init__.py  interfaces.py  memory.py
libs/streetmarket/models/: __init__.py  catalogue.py  energy.py  envelope.py  ledger_event.py  messages.py  rent.py  topics.py
libs/streetmarket/persistence/: __init__.py  snapshots.py
libs/streetmarket/policy/: __init__.py  engine.py
libs/streetmarket/ranking/: __init__.py  engine.py
libs/streetmarket/registry/: __init__.py  registry.py
libs/streetmarket/season/: __init__.py  manager.py
libs/streetmarket/world_state/: __init__.py  store.py
policies/: earth-medieval-temperate.yaml  season-1.yaml
references/: ai-street-market-prompt.md  architecture-v2.md  roadmap.md
scripts/: entrypoint-bridge.sh  entrypoint-market.sh  entrypoint.sh  proof_of_life.py  run_agent_manager.py  run_agent_runner.py  run_bridge.py  run_economy.py  run_season.py  setup_dev.sh
services/: __init__.py
sessions/: 2026-02-19-step1-scaffolding-message-bus.md  2026-02-19-step2-governor-agent.md  2026-02-19-step3-banker-agent.md  2026-02-19-step4-world-engine.md  2026-02-20-step5-trading-agents.md  2026-02-22-step6-economy-runner.md  2026-02-22-step7-energy-system.md  2026-02-23-step8-level1-complete.md  2026-02-24-step10-websocket-bridge.md  2026-02-24-step11-llm-agents.md  2026-02-24-step9-town-crier.md  2026-02-25-agent-isolation.md  2026-02-25-social-scoring-system.md  2026-02-25-step11-economy-tuning.md  2026-02-25-step12-protocol-spec.md  2026-02-25-step12b-economy-fixes.md  2026-02-25-step13-agent-personality.md  2026-02-25-step14-perishable-loud-market-bugfixes.md  2026-02-26-architecture-v2-phase0.md  2026-02-26-deployment-script.md  2026-02-26-phase1-new-foundation.md  2026-02-26-phase2-market-agents.md  2026-02-26-phase3-agent-sdk.md  2026-02-26-phase4-frontend-v2.md  2026-02-26-phase5-season-framework.md  2026-02-26-step14b-bankruptcy-consistency-viewer-data-gaps.md  2026-02-27-cicd-railway.md  2026-02-27-external-agent-repos.md  2026-02-28-cicd-complete.md  2026-02-28-local-agents-staging.md  2026-02-28-message-sanitization.md  2026-02-28-numeric-temperature.md  2026-02-28-railway-and-push.md  2026-02-28-staging-sync.md  2026-02-28-thoughts-feature.md  2026-03-01-managed-agent-platform.md  2026-03-05-project-hibernation.md
tests/: conftest.py  test_agent_config_models.py  test_agent_llm_brain.py  test_agent_manager.py  test_agent_runner.py  test_agent_sdk.py  test_agent_sdk_rent.py  test_ai_guardrails.py  test_archetypes.py  test_ledger.py  (+57 more)
(+83 files in other folders)
